<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul"
    tools:context="com.example.apped.Funciones.EditarActivity">

    <TextView
        android:id="@+id/txtEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/actualizar_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditar"
        android:src="@drawable/logo1" />

    <EditText
        android:id="@+id/atxtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_face"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/atxtApellidoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_face"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/apellido_paterno"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atxtNombre" />

    <EditText
        android:id="@+id/atxtApellidoM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_face"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/apellido_materno"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atxtApellidoP" />


    <EditText
        android:id="@+id/atxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atxtApellidoM" />

    <EditText
        android:id="@+id/atxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atxtEmail" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/purple_500"
        android:text="@string/actualizar"
        android:background="@drawable/button_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atxtPassword" />

    <Button
        android:id="@+id/btnCancelarA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/cancelar"
        android:background="@drawable/button_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizar" />
</androidx.constraintlayout.widget.ConstraintLayout>